---
source: tests/walker.rs
expression: walker.inputs
info:
  flake_nix: ""
  changes: []
---
crane:
  id: crane
  flake: true
  url: "\"github:ipetkov/crane\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
    - Indirect:
        - rust-overlay
        - "\"rust-overlay\""
  range:
    start: 392
    end: 414
flake-utelinos:
  id: flake-utelinos
  flake: true
  url: "\"github:numtide/flake-utils\""
  follows: []
  range:
    start: 156
    end: 184
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:nixos/nixpkgs/nixos-unstable\""
  follows: []
  range:
    start: 91
    end: 128
rust-overlay:
  id: rust-overlay
  flake: true
  url: "\"github:oxalica/rust-overlay\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
  range:
    start: 220
    end: 249
